--- a/src/etools/applications/field_monitoring/planning/locale/ru/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/planning/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-09-01 17:55+0200\n"
+"POT-Creation-Date: 2025-10-29 15:16+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,7 +16,9 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
+"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
+"n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || "
+"(n%100>=11 && n%100<=14)? 2 : 3);\n"
 
 msgid "TPM Partner selected for staff activity"
 msgstr "партнер TPM выбран для работы персонала"
@@ -25,12 +27,21 @@ msgid "Staff members do not belong to the selected partner"
 msgstr "Сотрудники не принадлежат выбранному партнеру"
 
 #, python-format
-msgid "You've selected a PD/SPD and unselected some of it's corresponding partners, please either remove the PD or add the partners back before saving: %s"
-msgstr "Вы выбрали PD/SPD и отменили выбор некоторых соответствующих партнеров, пожалуйста, либо удалите PD, либо добавьте партнеров обратно перед сохранением: %s"
+msgid ""
+"You've selected a PD/SPD and unselected some of it's corresponding partners, "
+"please either remove the PD or add the partners back before saving: %s"
+msgstr ""
+"Вы выбрали PD/SPD и отменили выбор некоторых соответствующих партнеров, "
+"пожалуйста, либо удалите PD, либо добавьте партнеров обратно перед "
+"сохранением: %s"
 
 #, python-format
-msgid "You've selected a PD/SPD and unselected some of it's corresponding outputs, please either remove the PD or add the outputs back before saving: %s"
-msgstr "Вы выбрали PD/SPD и сняли выделение с некоторых соответствующих выходов, пожалуйста, удалите PD или добавьте выходы обратно перед сохранением: %s"
+msgid ""
+"You've selected a PD/SPD and unselected some of it's corresponding outputs, "
+"please either remove the PD or add the outputs back before saving: %s"
+msgstr ""
+"Вы выбрали PD/SPD и сняли выделение с некоторых соответствующих выходов, "
+"пожалуйста, удалите PD или добавьте выходы обратно перед сохранением: %s"
 
 msgid "Visit lead is inactive or has no access"
 msgstr "Руководитель визита неактивен или не имеет доступа"
@@ -176,6 +187,15 @@ msgstr "ТПМ"
 msgid "Both"
 msgstr "Оба"
 
+msgid "Temporary"
+msgstr "Временный"
+
+msgid "Semi-permanent"
+msgstr "Полупостоянный"
+
+msgid "Permanent"
+msgstr "Постоянный"
+
 msgid "Draft"
 msgstr ""
 
@@ -234,7 +254,10 @@ msgid "Objective"
 msgstr "Цель"
 
 msgid "Facility types"
-msgstr ""
+msgstr "Типы объектов"
+
+msgid "Facility Type Duration"
+msgstr "Продолжительность типа объекта"
 
 msgid "Monitoring Activity"
 msgstr "Мониторинг активности"
@@ -308,8 +331,11 @@ msgstr "Категория точки действия"
 msgid "Priority"
 msgstr "Приоритет"
 
-msgid "Cannot assign inactive location \"{}\". Please choose an active location."
-msgstr "Невозможно назначить неактивное местоположение \"{}\". Пожалуйста, выберите активное местоположение."
+msgid ""
+"Cannot assign inactive location \"{}\". Please choose an active location."
+msgstr ""
+"Невозможно назначить неактивное местоположение \"{}\". Пожалуйста, выберите "
+"активное местоположение."
 
 msgid "TPM Concern Category"
 msgstr ""
