Adding multiple related_sections

--- a/src/etools/applications/field_monitoring/planning/locale/ar/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/planning/locale/ar/LC_MESSAGES/django.po
@@ -179,6 +179,9 @@ msgstr "نماذج السؤال"
 msgid "Related Section"
 msgstr "القسم المعني"
 
+msgid "Related Sections"
+msgstr "الأقسام المعنية"
+
 msgid "Temporary"
 msgstr "مؤقت"
 
