--- a/src/etools/applications/field_monitoring/planning/locale/es/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/planning/locale/es/LC_MESSAGES/django.po
@@ -181,6 +181,9 @@ msgstr "Plantillas de Preguntas"
 msgid "Related Section"
 msgstr "Sección Relacionada"
 
+msgid "Related Sections"
+msgstr "Secciones Relacionadas"
+
 msgid "Temporary"
 msgstr "Temporal"
 
