--- a/src/etools/applications/field_monitoring/planning/locale/ru/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/planning/locale/ru/LC_MESSAGES/django.po
@@ -181,6 +181,9 @@ msgstr "Шаблоны вопросов"
 msgid "Related Section"
 msgstr "Связанный раздел"
 
+msgid "Related Sections"
+msgstr "Связанные разделы"
+
 msgid "Temporary"
 msgstr "Временный"
 
