--- a/src/etools/applications/field_monitoring/planning/locale/pt/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/planning/locale/pt/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-11-04 09:16+0000\n"
+"POT-Creation-Date: 2025-11-18 12:28+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -25,20 +25,12 @@ msgid "Staff members do not belong to the selected partner"
 msgstr "Os funcionários não pertencem ao parceiro selecionado"
 
 #, python-format
-msgid ""
-"You've selected a PD/SPD and unselected some of it's corresponding partners, "
-"please either remove the PD or add the partners back before saving: %s"
-msgstr ""
-"Você selecionou um PD/SPD e desmarcou alguns de seus parceiros "
-"correspondentes, remova o PD ou adicione os parceiros antes de salvar: %s"
+msgid "You've selected a PD/SPD and unselected some of it's corresponding partners, please either remove the PD or add the partners back before saving: %s"
+msgstr "Você selecionou um PD/SPD e desmarcou alguns de seus parceiros correspondentes, remova o PD ou adicione os parceiros antes de salvar: %s"
 
 #, python-format
-msgid ""
-"You've selected a PD/SPD and unselected some of it's corresponding outputs, "
-"please either remove the PD or add the outputs back before saving: %s"
-msgstr ""
-"Você selecionou um PD/SPD e desmarcou algumas de suas saídas "
-"correspondentes, remova o PD ou adicione as saídas antes de salvar: %s"
+msgid "You've selected a PD/SPD and unselected some of it's corresponding outputs, please either remove the PD or add the outputs back before saving: %s"
+msgstr "Você selecionou um PD/SPD e desmarcou algumas de suas saídas correspondentes, remova o PD ou adicione as saídas antes de salvar: %s"
 
 msgid "Visit lead is inactive or has no access"
 msgstr "O responsável pela visita está inativo ou sem acesso"
@@ -174,9 +166,6 @@ msgstr "Modelo de Pergunta"
 
 msgid "Question Templates"
 msgstr "Modelos de Pergunta"
-
-msgid "Related Section"
-msgstr "Seção Relacionada"
 
 msgid "Related Sections"
 msgstr "Seções Relacionadas"
@@ -349,11 +338,8 @@ msgstr "Categoria de Ponto de Ação"
 msgid "Priority"
 msgstr "Prioridade"
 
-msgid ""
-"Cannot assign inactive location \"{}\". Please choose an active location."
-msgstr ""
-"Não é possível atribuir uma localização inativa \"{}\". Por favor, escolha "
-"uma localização ativa."
+msgid "Cannot assign inactive location \"{}\". Please choose an active location."
+msgstr "Não é possível atribuir uma localização inativa \"{}\". Por favor, escolha uma localização ativa."
 
 msgid "TPM Concern Category"
 msgstr ""
@@ -366,6 +352,9 @@ msgstr "Modelos"
 
 msgid "Attachments"
 msgstr "Anexos"
+
+#~ msgid "Related Section"
+#~ msgstr "Seção Relacionada"
 
 #~ msgid "Type Of Facility"
 #~ msgstr "Tipo de instalação"
