--- a/src/etools/applications/field_monitoring/planning/locale/es/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/planning/locale/es/LC_MESSAGES/django.po
@@ -2,13 +2,13 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-09-18 16:39+0200\n"
+"POT-Creation-Date: 2025-11-18 12:28+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -167,6 +167,39 @@ msgstr "Plantilla de Preguntas"
 msgid "Question Templates"
 msgstr "Plantillas de Preguntas"
 
+msgid "Related Sections"
+msgstr "Secciones Relacionadas"
+
+msgid "Temporary"
+msgstr "Temporal"
+
+msgid "Semi-permanent"
+msgstr "Semi-permanente"
+
+msgid "Permanent"
+msgstr "Permanente"
+
+msgid "Monitoring Activity"
+msgstr "Actividad de Monitoreo"
+
+msgid "Facility Type"
+msgstr "Tipo de Instalación"
+
+msgid "Facility Type Durations"
+msgstr "Duración del Tipo de Instalación"
+
+msgid "One or more duration options for this facility type"
+msgstr "Una o más opciones de duración para este tipo de instalación"
+
+msgid "Monitoring Activity Facility Type"
+msgstr "Tipo de Instalación de Actividad de Monitoreo"
+
+msgid "Monitoring Activity Facility Types"
+msgstr "Tipos de Instalación de Actividad de Monitoreo"
+
+msgid "No duration"
+msgstr "Sin duración"
+
 msgid "Staff"
 msgstr "Personal"
 
@@ -234,10 +267,7 @@ msgid "Objective"
 msgstr "Objetivo"
 
 msgid "Facility types"
-msgstr ""
-
-msgid "Monitoring Activity"
-msgstr "Actividad de Monitoreo "
+msgstr "Tipos de instalación"
 
 msgid "Monitoring Activities"
 msgstr "Actividades de Monitoreo"
@@ -322,6 +352,9 @@ msgstr "Plantillas"
 
 msgid "Attachments"
 msgstr "Archivos adjuntos"
+
+#~ msgid "Related Section"
+#~ msgstr "Sección Relacionada"
 
 #~ msgid "Type Of Facility"
 #~ msgstr "Tipo de instalación"
