--- a/src/etools/applications/partners/locale/pt/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/pt/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-08-07 14:14+0000\n"
+"POT-Creation-Date: 2025-11-21 12:41+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1543,8 +1543,8 @@ msgstr "Visita planejada não pode ser definida para intervenções encerradas"
 msgid ""
 "An attachment cannot be changed in statuses \"Ended, Closed or Terminated\""
 msgstr ""
-"Um anexo não pode ser alterado nos status \"Finalizado, Fechado ou Encerrado"
-"\""
+"Um anexo não pode ser alterado nos status \"Finalizado, Fechado ou "
+"Encerrado\""
 
 msgid "An Output cannot be updated for a partner that is blocked in Vision"
 msgstr ""
@@ -1571,6 +1571,10 @@ msgstr "due_date deve ser igual ou posterior a end_date"
 
 msgid "This period overlaps an existing reporting period."
 msgstr "Este período se sobrepõe a um período de relatório existente."
+
+#, python-format
+msgid "Invalid currency: %(value)s."
+msgstr ""
 
 #, python-format
 msgid "One or more of the FRs selected is related to a different PD/SPD, %s"
