--- a/src/etools/applications/partners/locale/es/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/es/LC_MESSAGES/django.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: et-partners2-bk\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-11-21 12:41+0000\n"
+"POT-Creation-Date: 2026-01-08 11:54+0000\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -981,6 +981,9 @@ msgstr "UNICEF Tipo de revisión"
 
 msgid "Capacity Development"
 msgstr "Desarrollo de las capacidades"
+
+msgid "Accountability to Affected Populations (AAP)"
+msgstr "Rendición de cuentas a las poblaciones afectadas (AAP)"
 
 msgid "Other Info"
 msgstr "Otros datos"
