--- a/src/etools/applications/partners/locale/ru/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/ru/LC_MESSAGES/django.po
@@ -2,13 +2,13 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-11-21 12:41+0000\n"
+"POT-Creation-Date: 2026-01-08 11:54+0000\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -983,6 +983,9 @@ msgstr "Тип рассмотрения ЮНИСЕФ"
 
 msgid "Capacity Development"
 msgstr "Развитие потенциала"
+
+msgid "Accountability to Affected Populations (AAP)"
+msgstr "Подотчетность перед пострадавшим населением (AAP)"
 
 msgid "Other Info"
 msgstr "Другая информация"
