--- a/src/etools/applications/partners/locale/fr/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2026-01-08 11:54+0000\n"
+"POT-Creation-Date: 2026-01-23 08:15+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -612,6 +612,21 @@ msgstr "Plan de travail détaillé Budget"
 
 msgid "Supply Contribution (Planned)"
 msgstr "Contribution à l'offre (prévue)"
+
+msgid "Open selection"
+msgstr "Sélection ouverte"
+
+msgid "Direct selection"
+msgstr "Sélection directe"
+
+msgid ""
+"Select how the partner was selected in UNPP (Open selection or Direct "
+"selection)."
+msgstr ""
+"Sélectionnez comment le partenaire a été choisi dans UNPP (Sélection ouverte ou Sélection directe)."
+
+msgid "Partner Selection Modality"
+msgstr "Modalité de sélection du partenaire"
 
 msgid "Name"
 msgstr "Nom"
