--- a/src/etools/applications/partners/locale/es/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/es/LC_MESSAGES/django.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: et-partners2-bk\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2026-01-08 11:54+0000\n"
+"POT-Creation-Date: 2026-01-23 08:15+0000\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -603,6 +603,21 @@ msgstr "Plan de trabajo detallado Presupuesto"
 
 msgid "Supply Contribution (Planned)"
 msgstr "Contribución de la oferta (prevista)"
+
+msgid "Open selection"
+msgstr "Selección abierta"
+
+msgid "Direct selection"
+msgstr "Selección directa"
+
+msgid ""
+"Select how the partner was selected in UNPP (Open selection or Direct "
+"selection)."
+msgstr ""
+"Seleccione cómo se eligió al socio en UNPP (Selección abierta o Selección directa)."
+
+msgid "Partner Selection Modality"
+msgstr "Modalidad de selección de socios"
 
 msgid "Name"
 msgstr "Nombre"
