--- a/src/etools/applications/partners/locale/ru/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2026-01-08 11:54+0000\n"
+"POT-Creation-Date: 2026-01-23 08:15+0000\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -605,6 +605,21 @@ msgstr "Подробный бюджет рабочего плана"
 
 msgid "Supply Contribution (Planned)"
 msgstr "Вклад в снабжение (запланированный)"
+
+msgid "Open selection"
+msgstr "Открытый выбор"
+
+msgid "Direct selection"
+msgstr "Прямой выбор"
+
+msgid ""
+"Select how the partner was selected in UNPP (Open selection or Direct "
+"selection)."
+msgstr ""
+"Выберите, как был выбран партнер в UNPP (Открытый выбор или Прямой выбор)."
+
+msgid "Partner Selection Modality"
+msgstr "Способ выбора партнера"
 
 msgid "Name"
 msgstr "Имя"
